--- a/public/assets/plateforme/css/sb-admin-2.css
+++ b/public/assets/plateforme/css/sb-admin-2.css
@@ -10,7 +10,7 @@
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
- :root {
+:root {
   --blue: #0094ca;
   --indigo: #6610f2;
   --purple: #6f42c1;
@@ -62,7 +62,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 body {
   margin: 0;
   font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.5;
   color: #c2c2c2;
@@ -376,23 +376,23 @@ h1, h2, h3, h4, h5, h6,
 }
 
 h1, .h1 {
-  font-size: 2.5rem;
-}
-
-h2, .h2 {
   font-size: 2rem;
 }
 
-h3, .h3 {
+h2, .h2 {
   font-size: 1.75rem;
 }
 
-h4, .h4 {
+h3, .h3 {
   font-size: 1.5rem;
 }
 
-h5, .h5 {
+h4, .h4 {
   font-size: 1.25rem;
+}
+
+h5, .h5 {
+  font-size: 1.1rem;
 }
 
 h6, .h6 {
@@ -400,7 +400,7 @@ h6, .h6 {
 }
 
 .lead {
-  font-size: 1.25rem;
+  font-size: 1.15rem;
   font-weight: 300;
 }
 
@@ -1690,7 +1690,7 @@ pre code {
 
 .table-sm th,
 .table-sm td {
-  padding: 0.3rem;
+  padding: 0.1rem;
 }
 
 .table-bordered {
@@ -2075,7 +2075,7 @@ pre code {
 }
 
 .form-control:disabled, .form-control[readonly] {
-  background-color: #eaecf4;
+  background-color: #333;
   opacity: 1;
 }
 
@@ -5517,9 +5517,9 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-info {
-  color: #1c606a;
-  background-color: #d7f1f5;
-  border-color: #c7ebf1;
+  color: #d7f1f5;
+  background-color: #1c606a;
+  border-color: #1c606a;
 }
 
 .alert-info hr {
@@ -11209,9 +11209,18 @@ a:focus {
 
 .sidebar .nav-item .collapse .collapse-inner .collapse-item.active,
 .sidebar .nav-item .collapsing .collapse-inner .collapse-item.active {
-  color: #0094ca;
-  font-weight: 700;
+  color: #1a171b;
+  font-weight: 600;
 }
+
+.sidebar .nav-item .collapse .collapse-inner .collapse-item.active::before,
+.sidebar .nav-item .collapsing .collapse-inner .collapse-item.active::before {
+  position: absolute;
+  left:0;
+  content: '\f0da';
+  font-family: 'Font Awesome 5 Free';
+}
+
 
 .sidebar #sidebarToggle {
   width: 2.5rem;
