--- a/templates/aide/tutorial/edit.html.twig
+++ b/templates/aide/tutorial/edit.html.twig
@@ -8,13 +8,13 @@
         <h1 class="h3 mb-0 text-gray-200"><i class="fas fa-question-circle fa-fw text-gray-400"></i> Édition de <i>"{{ entity.title }}"</i></h1>
 
         <div class="d-sm-inline-block">
-            <a href="{{ path('tutorial.index') }}" class="btn btn-sm btn-secondary shadow-sm">
+            <a href="{{ path('aide.tutorial.index') }}" class="btn btn-sm btn-secondary shadow-sm">
                 <i class="fas fa-reply fa-sm text-white-50"></i>
             </a>
-            <a href="{{ path('tutorial.show', {id: entity.id}) }}" class="btn btn-sm btn-primary shadow-sm">
+            <a href="{{ path('aide.tutorial.show', {id: entity.id}) }}" class="btn btn-sm btn-primary shadow-sm">
                 <i class="fas fa-eye fa-sm text-white-50"></i> Voir ce tutoriel
             </a>
-            <form method="post" style="display:inline-block;"action="{{ path('tutorial.delete', {id: entity.id}) }}" onsubmit="return confirm('Êtes-vous sûr ?')">
+            <form method="post" style="display:inline-block;"action="{{ path('aide.tutorial.delete', {id: entity.id}) }}" onsubmit="return confirm('Êtes-vous sûr ?')">
                 <input type="hidden" name="_method" value="DELETE">
                 <input type="hidden" name="_token" value="{{ csrf_token('delete_tutorial') }}">
                 <button class="btn btn-sm btn-danger" title="Supprimer ce tutoriel"><i class="fas fa-trash fa-sm text-white-50"></i> Supprimer ce tutoriel</button>
@@ -24,7 +24,7 @@
 
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="{{ path('tutorial.index') }}">Gestion des tutoriels</a></li>
+            <li class="breadcrumb-item"><a href="{{ path('aide.tutorial.index') }}">Gestion des tutoriels</a></li>
             <li class="breadcrumb-item active" aria-current="page">Édition de <i>"{{ entity.title }}"</i></li>
         </ol>
     </nav>
@@ -41,7 +41,7 @@
 
                 <div class="form-group">
                     <label for="input-content">Contenu</label>
-                    <textarea id="input-content" name="input-content" class="form-control" rows="3">{{ entity.content }}</textarea>
+                    <textarea id="input-content" name="content" class="form-control" rows="3">{{ entity.content }}</textarea>
                 </div>
 
                 <hr>
@@ -65,6 +65,8 @@
 
 {% block javascripts %}
     <script>
-        CKEDITOR.replace('input-content');
+        CKEDITOR.replace('input-content', {
+            toolbar: [ ['Bold', 'Italic', 'Underline', '-', 'NumberedList', 'BulletedList', '-', 'Table', '-', 'Maximize'] ]
+        });
     </script>
 {% endblock %}
