--- a/templates/aide/tutorial/new.html.twig
+++ b/templates/aide/tutorial/new.html.twig
@@ -10,14 +10,14 @@
 
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="{{ path('tutorial.index') }}">Gestion des tutoriaux</a></li>
+            <li class="breadcrumb-item"><a href="{{ path('aide.tutorial.index') }}">Gestion des tutoriaux</a></li>
             <li class="breadcrumb-item active" aria-current="page">Rédaction d'un tutoriel</li>
         </ol>
     </nav>
 
     <hr>
 
-   <div class="card shadow mb-4">
+    <div class="card shadow mb-4">
         <div class="card-body">
             <form action="#" method="post" enctype="multipart/form-data">
                 <div class="form-group">
@@ -26,8 +26,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="content">Contenu</label>
-                    <textarea id="content" name="content" class="form-control" rows="3"></textarea>
+                    <label for="input-content">Contenu</label>
+                    <textarea id="input-content" name="content" class="form-control" rows="3"></textarea>
                 </div>
 
                 <hr>
@@ -38,7 +38,7 @@
                             <input id="public" name="public" type="checkbox" aria-label="Publier">&nbsp;Publier
                         </span>
                     </div>
-                    <button class="btn btn-success" type="submit">
+                    <button class="btn btn-sm btn-success" type="submit">
                         <i class="far fa-save"></i>&nbsp;Enregistrer
                     </button>
                 </div>
@@ -51,6 +51,8 @@
 
 {% block javascripts %}
     <script>
-        //CKEDITOR.replace('content');
+        CKEDITOR.replace('input-content', {
+            toolbar: [ ['Bold', 'Italic', 'Underline', '-', 'NumberedList', 'BulletedList', '-', 'Table', '-', 'Maximize'] ]
+        });
     </script>
 {% endblock %}
