--- a/templates/aide/tutorial/show.html.twig
+++ b/templates/aide/tutorial/show.html.twig
@@ -5,10 +5,16 @@
 {% block body %}
     <div class="d-sm-flex align-items-center justify-content-between mb-2">
         <h1 class="h3 mb-0 text-gray-200"><i class="fas fa-question-circle fa-fw text-gray-400"></i> {{ entity.title }}</h1>
-        <a href="{{ path('tutorial.edit', {id: entity.id}) }}" class="d-sm-inline-block btn btn-sm btn-warning shadow-sm">
+        <a href="{{ path('aide.tutorial.edit', {id: entity.id}) }}" class="d-sm-inline-block btn btn-sm btn-warning shadow-sm">
             <i class="fas fa-pen fa-sm text-white-50"></i> Modifier ce tutoriel
         </a>
     </div>
+
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item active" aria-current="page">Gestion des tutoriaux</li>
+        </ol>
+    </nav>
 
     <hr>
 
