--- a/templates/planeswalkers/artist/index.html.twig
+++ b/templates/planeswalkers/artist/index.html.twig
@@ -35,4 +35,8 @@
         </div>
     </div>
 
+    <div class="navigation">
+        {{ knp_pagination_render(artists) }}
+    </div>
+
 {% endblock %}
