--- a/templates/back.html.twig
+++ b/templates/back.html.twig
@@ -86,6 +86,14 @@
                     </div>
                 </li>
 
+                <hr class="sidebar-divider">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('planeswalkers.simulation.index') }}">
+                        <i class="fas fa-gamepad"></i>
+                        <span>Simulation</span>
+                    </a>
+                </li>
+
                 <hr class="sidebar-divider d-none d-md-block">
 
                 <div class="text-center d-none d-md-inline">
